[package]
name = "astra-cobalt-plugin"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "0100a6301214e000" # Fire Emblem Engage

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.0"
anyhow = "1.0.83"
glob = "0.3.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
